# rss-reader

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-rss-reader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rss-reader/checklists/: requirements.md
specs/001-rss-reader/contracts/: cli-commands.md
specs/002-rss-reader-gui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rss-reader-gui/checklists/: requirements.md
specs/002-rss-reader-gui/contracts/: gui-screens.md
src/: error.rs  lib.rs  main.rs
src/cli/: add.rs  list_feeds.rs  list_items.rs  mod.rs  open_enclosure.rs  refresh.rs  remove.rs  show.rs
src/feed/: mod.rs
src/fetch/: mod.rs
src/format/: mod.rs
src/gui/: app.rs  mod.rs  widgets.rs
src/gui/views/: add_feed.rs  article_detail.rs  article_list.rs  feed_list.rs  mod.rs
src/media/: mod.rs
src/store/: mod.rs
tests/contract/: test_add.rs  test_library_api.rs  test_list_feeds.rs  test_list_items.rs  test_remove.rs  test_show.rs
tests/integration/: test_format.rs  test_gui_shared_storage.rs  test_manage_feeds.rs  test_media.rs  test_subscribe_read.rs
