[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Full-featured RSS reader with CLI: add/remove feeds, pretty text formatting, multimedia support."
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
feed-rs = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
thiserror = "1.0"
dirs = "5.0"
html2text = "0.2"
open = "5.0"

[dev-dependencies]
tempfile = "3.10"
predicates = "3.0"
assert_cmd = "2.0"
serde_json = "1.0"

[[test]]
name = "contract_library_api"
path = "tests/contract/test_library_api.rs"

[[test]]
name = "contract_add"
path = "tests/contract/test_add.rs"

[[test]]
name = "contract_list_items"
path = "tests/contract/test_list_items.rs"

[[test]]
name = "contract_show"
path = "tests/contract/test_show.rs"

[[test]]
name = "integration_subscribe_read"
path = "tests/integration/test_subscribe_read.rs"

[[test]]
name = "contract_list_feeds"
path = "tests/contract/test_list_feeds.rs"

[[test]]
name = "contract_remove"
path = "tests/contract/test_remove.rs"

[[test]]
name = "integration_manage_feeds"
path = "tests/integration/test_manage_feeds.rs"

[[test]]
name = "integration_format"
path = "tests/integration/test_format.rs"

[[test]]
name = "integration_media"
path = "tests/integration/test_media.rs"

[profile.release]
lto = true
codegen-units = 1
